<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <EditText
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="80dp"
        android:hint="New Task"
        android:inputType="text"
        android:maxLength="20"
        android:textAlignment="center"
        android:imeOptions="actionDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/due_date"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:focusable="false"
        android:hint="Due Date"
        android:imeOptions="actionDone"
        android:inputType="date"
        android:onClick="showDatePickerDailog"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/tag"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:hint="Tag"
        android:maxLength="10"
        android:inputType="text"
        android:textAlignment="center"
        android:imeOptions="actionDone"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <Spinner
        android:id="@+id/priority"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="200dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <Button
        android:id="@+id/addTaskButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="356dp"
        android:onClick="addTask"
        android:text="Save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />


</androidx.constraintlayout.widget.ConstraintLayout>
